2006-03-31  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/gtk_methods.defs: Regenerated with h2defs.py.
	* tools/extra_defs_gen/generate_defs_gtk.cc: Added 
	GTK_TYPE_CELL_RENDERER_SPIN, GTK_TYPE_RECENT_CHOOSER, 
	GTK_TYPE_RECENT_CHOOSER_MENU, GTK_TYPE_RECENT_CHOOSER_WIDGET, 
	GTK_TYPE_RECENT_FILTER, GTK_TYPE_RECENT_MANAGER )
	* gtk/src/gtk_signals.defs: Added sections for the new types.


2006-03-28  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/gtk_docs_override.xml: Added override for 
	gtk_widget_render_icon(), because it mentioned unrefing the result.

2006-03-26  Murray Cumming  <murrayc@murrayc.com>

	* gdk/src/gdk_docs_override.xml: Override the documentation for 
	create_cairo_context because it mentions destroying the result, 
	and says that it is since 2.8 instead of 2.10.

2006-03-23  Murray Cumming  <murrayc@murrayc.com>

	* gdk/src/pixbufloader.hg: create(): Add documentation, based on 
	new C documentation.

2006-03-22  Murray Cumming  <murrayc@murrayc.com>

	* docs/tutorial/Makefile.am: Add style.css to EXTRA_DIST.
	* docs/tutorial/gtkmm-tut.xml: TreeView chapter: Add a 
	sub-section about sorting, mentioning the simple set_sort_column() 
	functions and TreeModelSort for independent sorting. Based on 
	code from the example from R. Douglas Barbieri in bug #334791.

2006-03-22  Murray Cumming <murrayc@murrayc.com>

	* gdk/src/dragcontext.hg: Added set_icon_name().
	* gtk/src/toolbutton.hg: Added set_icon_name() and 
	get_icon_name().
	* gdk/src/pixbuf.hg:
	* gdk/src/pixbufloader.ccg:
	* gdk/src/pixbufloader.hg:
	* gtk/src/aboutdialog.hg:
	* gtk/src/dialog.hg:
	* gtk/src/iconview.hg:
	* gtk/src/linkbutton.hg:
	* gtk/src/textbuffer.hg:
	* gtk/src/textchildanchor.hg:
	* gtk/src/treemodelsort.hg: Added documentation, based on 
	the C documentation.

2006-03-22  Murray Cumming <murrayc@murrayc.com>

	* configure.in:
	* examples/book/Makefile.am:
	* examples/book/iconview/Makefile.am:
	* examples/book/iconview/examplewindow.cc: