@@ -7369,16 +7369,16 @@ some_gc.set_foreground(some_color);</programlisting>
   </para>
   <para>
     The easiest way to do this is using <ulink
-      href="http://www.gnome.org/~jamesh/jhbuild.html">jhbuild</ulink>.
+      url="http://www.gnome.org/~jamesh/jhbuild.html">jhbuild</ulink>.
     <application>jhbuild</application> is a program that makes building GNOME
     software much easier by calculating dependencies and building things in the
     correct order.  This section will give a brief explanation of how to set up
     jhbuild to build and install &gtkmm; from CVS.  For up-to-date information
     on <application>jhbuild</application>, please refer to the <ulink 
-      href="http://www.gnome.org/~jamesh/jhbuild.html">jhbuild website</ulink>.
+      url="http://www.gnome.org/~jamesh/jhbuild.html">jhbuild website</ulink>.
     If you need assistance using <application>jhbuild</application>, you should
     ask for help on the <ulink
-      href="http://mail.gnome.org/mailman/listinfo/gnome-love">gnome-love
+      url="http://mail.gnome.org/mailman/listinfo/gnome-love">gnome-love
       mailing list</ulink>.
   </para>
   <note>
@@ -7392,7 +7392,7 @@ some_gc.set_foreground(some_color);</programlisting>
     <para>
       To set up <application>jhbuild</application>, follow the basic
       installation instructions from the <ulink
-        href="http://www.gnome.org/~jamesh/jhbuild.html">jhbuild manual</ulink>.
+        url="http://www.gnome.org/~jamesh/jhbuild.html">jhbuild manual</ulink>.
       After you've gotten <application>jhbuild</application> installed, you
       should copy the sample <application>jhbuild</application> configuration
       file into your home directory by executing the following command from the
