@@ -1,3 +1,8 @@
+2006-04-04  Jonathon Jongsma  <jonathon.jongsma@gmail.com>
+
+	* docs/tutorial/gtkmm-tut.xml: fixed a few broken links in the jhbuild
+	appendix
+
 2006-03-31  Murray Cumming  <murrayc@murrayc.com>
 
 	* gtk/src/gtk_methods.defs: Regenerated with h2defs.py.
